--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="row">
                   <div class="col-md-3">
-                    <h1 class="logo"><a href="allisoncrompton.com"><img src="images/AllisonBrand_RGB228pxW.jpg" alt="Allison Crompton Graphic Design"></a></h1>
+                    <h1 class="logo"><a href="index.html"><img src="images/AllisonBrand_RGB228pxW.jpg" alt="Allison Crompton Graphic Design"></a></h1>
                   </div>
                   <div class="col-md-9">  
                     <nav class="navigation">
