--- a/afiarebrand.html
+++ b/afiarebrand.html
@@ -71,7 +71,7 @@
                     </p>
                     <h2>Description:
                     </h2>
-                    <p>AFIA brand refresh including logo, adding tagline and update of all collateral. Brand refresh debuted 2014. Copyright AFIA.</p>
+                    <p>AFIA brand refresh including logo, adding tagline and update of all collateral. Improved business card stock and added thermography/raised ink at a lower cost with a new printer. Brand refresh debuted 2014. Copyright AFIA.</p>
 <!--                     <p>IFEEDER is a non-profit 501(c)(3) charitable organization dedicated to sustaining the future of food and feed production through education and research. IFEEDER broadly represents the feed industry, including representation from academia, and experts in science and technology.
                     </p> -->
 
