--- a/ifpri.html
+++ b/ifpri.html
@@ -65,7 +65,7 @@
                     </p>
                     <h2>Description:
                     </h2>
-                    <p>Five brochure series to promote IFPRI’s Program for Biosafety Systems in different countries. Debuted 2007. Copyright IFPRI.</p>
+                    <p>Five brochure series to promote IFPRI’s Program for Biosafety Systems in different countries. Debuted 2007. Copyright IFPRI. (contract work)</p>
                   </div>
                 </div>
             </div>
