--- a/stmattsauce.html
+++ b/stmattsauce.html
@@ -75,7 +75,7 @@
                     </p>
                     <h2>Description:
                     </h2>
-                    <p>Labels for Saint Matthew's 2 hot sauces. Brand debuted September 2016. Copyright Saint Matthew's Episcopal Church of Sterling, VA.</p>
+                    <p>Labels for Saint Matthew's 2 hot sauces. Brand debuted September 2016. Copyright Saint Matthew's Episcopal Church of Sterling, VA. (pro bono)</p>
 <!--                     <p>IFEEDER is a non-profit 501(c)(3) charitable organization dedicated to sustaining the future of food and feed production through education and research. IFEEDER broadly represents the feed industry, including representation from academia, and experts in science and technology.
                     </p> -->
 
